tests/fixtures/positive/style/UnusedPrivateFunction.kt
package fixtures.positive.style

private fun unused() {
    println("never called")
}

fun main() {
    println("hello")
}
