tests/fixtures/negative/style/UtilityClassWithPublicConstructor.kt
package fixtures.negative.style

class Utils private constructor() {
    companion object {
        fun help() {
            println("helping")
        }
    }
}
